[package]
name = "rust-app-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
once_cell = "1.16.0"
rand = "0.8.5"
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }
clap = { version = "4.0.29", features = ["derive"] }
sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-tokio-rustls", "sqlx-dep"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
axum = { version = "0.6.1", features = ["macros"] }
hyper = { version = "0.14.23", features = ["full"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_matches = "1.5.0"
mockall = "0.11.3"
pretty_assertions = "1.3.0"
rstest = "0.16.0"
serde_json = "1.0.89"
tower = "0.4.13"
